# chessapi

./: Dockerfile  README.md  main.py  openapi.json  openapi.yml  pyproject.toml  requirements.txt
chessapi/: games.py  main.py  models.py
tests/: create.sh  delete.sh  games.sh  update.sh
