[tool.poetry]
name = "chessapi"
version = "0.1.0"
description = "A simple Chess API"
authors = ["Karan Kadam <karank@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/intothevoid/chessapi"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
